# pear-ui-template

./: .gitignore  app.js  index.html  index.js  package-lock.json  package.json
.github/workflows/: prebuild.yml
appling/: CMakeLists.txt  package.json
services/: package-lock.json  package.json
services/oniri-core/: package-lock.json  package.json
services/oniri-core/src/: api.js  app.js  index.js  rpc.js
services/src/: app.js
src/: startIpc.js
ui/: app.js  index.html  styles.css
whatever/: test.js
